# activity_analysis

./: README.md
engagement_checker/: CMakeLists.txt  package.xml
engagement_checker/src/: engage_check.py
strands_engagement_checker/: CHANGELOG.rst  CMakeLists.txt  package.xml
strands_engagement_checker/scripts/: engage_check.py
strands_engagement_checker/src/: engage_check.py
